crates/sentinel-driver/tests/snapshots/ui__c23_move_while_borrowed_merge.snap
---
source: crates/sentinel-driver/tests/ui.rs
expression: "reject_stderr(\"c23_move_while_borrowed_merge.sentinel\")"
---
sentinel::borrow::move_while_borrowed

  × cannot move out of `b` while it is borrowed
   ╭─[tests/ui/c23_move_while_borrowed_merge.sentinel:7:23]
 6 │     let r: &i64 = if c { &a[0] } else { &b[0] };
 7 │     let k: i64 = sink(b);
   ·                       ┬
   ·                       ╰── 
 8 │     *r
   ╰────
