crates/sentinel-driver/tests/snapshots/ui__c25_move_out_of_element.snap
---
source: crates/sentinel-driver/tests/ui.rs
expression: "reject_stderr(\"c25_move_out_of_element.sentinel\")"
---
sentinel::borrow::move_out_of_element

  × cannot move `xs[..]` out: an element cannot be moved out of its collection
    ╭─[tests/ui/c25_move_out_of_element.sentinel:10:13]
  9 │     let xs: [[i64]] = [[5, 1], [6, 2]];
 10 │     consume(xs[0])
    ·             ──┬──
    ·               ╰── 
 11 │ }
    ╰────
