crates/sentinel-driver/tests/snapshots/ui__c25_payload_after_conditional_reassign.snap
---
source: crates/sentinel-driver/tests/ui.rs
expression: "reject_stderr(\"c25_payload_after_conditional_reassign.sentinel\")"
---
sentinel::borrow::use_after_move

  × use of moved binding `e`
    ╭─[tests/ui/c25_payload_after_conditional_reassign.sentinel:18:24]
 17 │     };
 18 │     let q: i64 = match e { E::A(y) => consume(y), E::B => 0 };
    ·                        ┬
    ·                        ╰── 
 19 │     p + q
    ╰────
